--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-adopt": "^0.6.0",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0"
   },
