--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.3.1",
+    "apollo-client": "^2.5.1",
+    "graphql": "^14.2.1",
+    "graphql-tag": "^2.10.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-adopt": "^0.6.0",
+    "react-apollo": "^2.5.5",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0"
   },
   "scripts": {
