--- a/Server/package.json
+++ b/Server/package.json
@@ -17,13 +17,20 @@
   },
   "homepage": "https://github.com/gabrielbourget/Waveguide2#readme",
   "dependencies": {
+    "apollo-server": "^2.4.8",
+    "apollo-server-express": "^2.4.8",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "fs": "0.0.1-security",
     "graphql": "^14.2.1",
     "graphql-cli": "^3.0.11",
     "graphql-yoga": "^1.17.4",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.9.1",
+    "neo4j-graphql-js": "^2.6.0",
+    "path": "^0.12.7"
   }
 }
