--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react-apollo": "^2.5.5",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "react-syntax-highlighter": "^10.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
