--- a/Server/package.json
+++ b/Server/package.json
@@ -22,10 +22,12 @@
     "apollo-server-express": "^2.4.8",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-redis": "^3.4.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "fs": "0.0.1-security",
     "graphql": "^14.2.1",
     "graphql-cli": "^3.0.11",
@@ -33,7 +35,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "neo4j-graphql-js": "^2.6.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
