--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
     "jsonp": "^0.2.1",
+    "lodash": "^4.17.11",
     "node-sass": "^4.12.0",
     "qs": "^6.7.0",
     "react": "^16.8.6",
