--- a/Server/package.json
+++ b/Server/package.json
@@ -25,6 +25,7 @@
     "connect-redis": "^3.4.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
@@ -36,7 +37,9 @@
     "morgan": "^1.9.1",
     "neo4j-graphql-js": "^2.6.0",
     "path": "^0.12.7",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "util": "^0.12.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
