--- a/mobileclient/package.json
+++ b/mobileclient/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "expo": "^33.0.0",
+    "expo-file-system": "~5.0.1",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-web": "^0.11.4"
+    "react-native-expo-image-cache": "^4.0.6",
+    "react-native-web": "^0.11.4",
+    "shorthash": "^0.0.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1"
